# Shino

./: .clang-tidy  .codecov.yml  .gitignore  AGENT.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  codebuff.json  knowledge.md  test.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  ci.yml.backup  release.yml
.serena/: project.yml
docs/: README.md  api.md  design.md  development.md
src/: app.cpp  app.h  block_model.cpp  block_model.h  error_handler.h  main.cpp  markdown_renderer.cpp  markdown_renderer.h  pandoc_io.cpp  pandoc_io.h  security.h  tui_bindings.cpp  tui_bindings.h
tests/: app_test.cpp  app_test_helper.h  block_model_test.cpp  markdown_renderer_test.cpp  pandoc_io_test.cpp  perf_test.cpp  perf_test_framework.h  test_framework.h
